# serious-libraries

./: .gitignore  CMakeLists.txt  LICENSE  README.md
articles/: CMake is all you need.md
